# cagebot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: 0_📊_Overview.py  Overview.py  app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/components/: db.py  globe.py  queries.py  styles.py
dashboard/pages/: 1_📍_Locations.py  2_🥊_Fighters.py  3_📋_Fights.py  4_🔧_SQL_Explorer.py  5_📈_Model_Evaluation.py
etl/: db.py  load_all.py  load_elo_history.py  load_events.py  load_fighters.py  load_fights.py  load_odds.py  load_overrides.py
pipelines/: post_event.py  pre_event.py
schema/: 001_create_tables.sql  002_create_views.sql
tests/: __init__.py
tests/unit/: test_etl_elo.py  test_etl_events.py  test_etl_fighters.py  test_etl_fights.py  test_etl_odds.py  test_etl_overrides.py
