[project]
name = "cagebot"
version = "1.0.0"
description = "End-to-End ML Fight Prediction Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Juan Vicente Navas Teran"}]

dependencies = [
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "streamlit>=1.45.0",
    "plotly>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
